maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: not found: value &&
      if(y!=0)&&(!hasTopWall(x,y)){N=getIndication(x,y-1);}
              ^ShortestPathMaze:23: error: not found: value &&
      if(x!=0)&&(!hasLeftWall(x,y)){W=getIndication(x-1,y);}
              ^ShortestPathMaze:24: error: not found: value &&
      if(x!=11)&&(!hasTopWall(x+1,y)){E=getIndication(x+1,y);}
               ^ShortestPathMaze:25: error: not found: value &&
      if(y!=11)&&(!hasTopWall(x,y+1)){S=getIndication(x,y+1);}
               ^ShortestPathMaze:27: error: not found: value setIndicator
      if(N!=9999 && getIndication(x,y)==9999){setIndicator(x,y,N+1);}
                                              ^ShortestPathMaze:28: error: not found: value setIndicator
      else if(S!=9999 && getIndication(x,y)==9999){setIndicator(x,y,S+1);}
                                                   ^ShortestPathMaze:29: error: not found: value setIndicator
      else if(E!=9999 && getIndication(x,y)==9999){setIndicator(x,y,E+1);}
                                                   ^ShortestPathMaze:30: error: not found: value setIndicator
      else if(W!=9999 && getIndication(x,y)==9999){setIndicator(x,y,W+1);}
                                                   ^